# PrivatePDFTextExtractionTool

./: .gitignore  LICENSE  README.md  extract_pdf_text.py  pyproject.toml  run_extraction.bat
conversions/: .gitkeep
pdfs/: .gitkeep
